# market-comps

./: .env.example  .gitignore  app.py  or_models.json  pyproject.toml  requirements.txt  test_chat.py  test_math.py  test_waterfall_math.py
.streamlit/: config.toml
market_comps/: __init__.py  chorus_comps_engine.py  comps_engine.py  config.py  llm_client.py  metrics_fetcher.py  models.py  scanner.py  ui.py
market_comps/company_primer/: __init__.py  primer_finder.py
market_comps/competition/: __init__.py  competition_finder.py
market_comps/connections/: ct_registry.py
market_comps/cross_checker/: __init__.py  cross_checker.py
market_comps/pdf_parser/: __init__.py  models.py  pdf_client.py  term_extractor.py
market_comps/schema_framework/: __init__.py  engine.py  evidence_extraction_prompt.md  starter_schema.json  synthesis_prompt.md
market_comps/waterfall/: __init__.py  calculator.py  chat_agent.py  models.py
pages/: 10_Schema_Driven_Framework.py  11_CT_Business_Registry.py  1_Public_Comps.py  2_Competition_Finder.py  2_PDF_Parser.py  3_LLM_Cross_Checker.py  4_Company_Primer.py  5_FAQ.py  6_Waterfall_Calculator.py  7_Directory_Analyzer.py  8_Cash_Flow_Analysis.py  9_Portfolio_Company_Analysis.py
tests/: smoke_test.py
